# GGFPS

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  getting-started.md  index.md
scripts/: run_st_demo.py  run_st_simple_demo.py
src/ggfps_paper/: __init__.py  __main__.py  cli.py  datasets.py  experiment_runner.py  ggfps_sampling.py  kernels.py  krr_cv.py  simple_ggfps.py  simple_krr.py  training_set_optimization.py
tests/: test_cli.py  test_sampling.py  test_simple_pipeline.py  test_training_set_optimizer.py
