[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ggfps-paper"
version = "0.1.0"
description = "Reference implementation of GGFPS sampling and KRR workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GGFPS Contributors" }
]
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
